# robot_master

./: .envrc  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  pyproject.toml  ruff.toml
.cargo/: config.toml
.github/workflows/: errors.yml  sync_gitlab.yml  warnings.yml
.readme_assets/: Sujet-RobotMaster-version-04-02  description.md  installation.md  logo.html  other.md  usage.md
docs/: ARCHITECTURE.md  hidden.md  perf.md  rapport.typ  research.md  submission.typ
docs/.readme_assets/: description.md  installation.md  other.md  usage.md
docs/.readme_assets/assets/: test_layout.html
docs/attention_residuals/code/: README.md  eval.py
docs/references/: alphavit_2408.13871.md  alphazero_temperature_dirichlet.md  chessformer_2409.12272.md  gumbel_alphazero.md  replay_buffer_sizing.md  restnet_2410.05347.md
docs/references/MiniZero/: final.tex  references.bib
docs/references/MiniZero/table/: table1_alg_compare.tex  table2_hyperparameters.tex  table3_atari_57_table.tex
docs/references/attention_residuals/code/: app.py  modeling_attnres.py  requirements.txt  train.py  visualize.py
models/: dumbest_cnn_v15.onnx  first_to_match_rollout.onnx  latest.onnx  mini_zero_v1_-_59_-_5x5.onnx  model_v103.onnx  model_v114.onnx  model_v13.onnx  model_v15.onnx.data  t1_i31_first_intelligence.onnx
py_src/: __main__.py  export_onnx.py  model_resnet.py  model_transformer.py  test_export.py  train.py  tui_core.py
py_src/IA/: IA_test.py  __main__.py  c_joueuses_IA.py  e_jeu_IA.py  f_fonctions_additionelles.py  g_greedy.py  h_agressif.py  i_meilleurIA.py
py_src/partie_guidee/: __main__.py  a_plateau.py  a_test.py  b_gestionCartes.py  b_test.py  c_joueuses.py  c_test.py  d_score.py  d_test.py  e_jeu.py  e_test.py  z_variablesDeTest.py
robot_master/: Cargo.toml
robot_master/src/: app.rs  arena.rs  config.rs  lib.rs  main.rs  train.rs  tui.rs
robot_master/src/algos/: greedy.rs  manual.rs  mod.rs  random.rs  sadist.rs
robot_master_arena/: Cargo.toml
robot_master_arena/src/: config.rs  db.rs  lib.rs  match_.rs  player.rs  rating.rs  tournament.rs
robot_master_arena/src/algos/: greedy.rs  greedy_max.rs  greedy_min.rs  mod.rs  random.rs  rollout.rs  sadist.rs  test_utils.rs
robot_master_arena/src/algos/snapshots/: robot_master_arena__algos__rollout__tests__averse_midgame.snap
robot_master_core/: Cargo.toml
robot_master_core/src/: board.rs  cards.rs  game.rs  lib.rs  python.rs  scoring.rs
robot_master_engine/: Cargo.toml
robot_master_engine/src/: lib.rs
robot_master_engine/src/random/: mod.rs
robot_master_game/: Cargo.toml
robot_master_game/assets/: LICENSES.txt
robot_master_game/src/: gameplay.rs  lib.rs  menu.rs  result.rs  theme.rs
robot_master_site/: Cargo.toml
robot_master_site/public/: README.md  pyproject.toml  ruff.toml
robot_master_site/public/.github/workflows/: errors.yml  sync_gitlab.yml
robot_master_site/src/: lib.rs  main.rs
robot_master_train/: Cargo.toml
robot_master_train/src/: encoding.rs  gumbel.rs  lib.rs  mcts.rs  nn_eval.rs  player_kind.rs  selfplay.rs
scripts/: train_cnn.rs  train_transformer.rs
src/: app.rs  config.rs  game.rs  lib.rs  main.rs  sprite_animation.rs
training/: export_onnx.py  model_resnet.py  model_transformer.py  requirements.txt  test_export2.py  test_export3.py  train.py
