cargo-features = ["codegen-backend"]

[workspace]
members = ["robot_master", "robot_master_*"]
resolver = "3"

default-members = ["robot_master"]

[workspace.lints.clippy]
doc_lazy_continuation = "allow"
float_cmp = "allow"
get_first = "allow"
get_last_with_len = "allow"
len_zero = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
bevy = "0.18"
bevy_lunex = "0.6"
bon = "3"
derive-new = "^0.7.0"
miette = { version = "7", features = ["fancy"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smart-default = "0.7"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
ustr = { version = "1", features = ["serde"] }
v_utils = { version = "2.15", path = "/home/v/s/v_utils/v_utils", features = ["macros", "cli"] }

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
