cargo-features = ["codegen-backend"]

[workspace]
members = ["robot_master", "robot_master_*"]
resolver = "3"

default-members = ["robot_master"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BlueOak-1.0.0"
repository = "https://github.com/valeratrades/robot_master"

[workspace.lints.clippy]
doc_lazy_continuation = "allow"
float_cmp = "allow"
get_first = "allow"
get_last_with_len = "allow"
len_zero = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
too_many_arguments = "allow"
type_complexity = "allow"
manual_is_multiple_of = "allow"

[workspace.lints.rust]
unused_features = "allow"

[workspace.dependencies]
axum = "=0.8.9"
bevy = "=0.18.1"
bevy_lunex = "=0.6.0"
bevy_simple_text_input = "=0.14.2"
board-game = "=0.8.2"
bon = "=3.9.1"
bytemuck = "=1.25.0"
clap = { version = "=4.6.1", features = ["derive"] }
clickhouse = "=0.15.0"
console_error_panic_hook = "=0.1.7"
dashmap = "=6.1.0"
derive-new = "=0.7.0"
derive_more = { version = "=2.1.1", features = ["display", "from"] }
fuzzy-matcher = "=0.3.7"
getrandom = "=0.4.2"
indicatif = "=0.18.4"
insta = "=1.47.2"
internal-iterator = "=0.2.3"
leptos = "=0.8.19"
leptos_axum = "=0.8.9"
leptos_meta = "=0.8.6"
leptos_router = "=0.8.13"
miette = { version = "=7.6.0", features = ["fancy"] }
ort = "=2.0.0-rc.12"
rand = "=0.10.1"
rand_distr = "=0.6.0"
rayon = "=1.12.0"
regex = "=1.12.3"
robot_master_arena = { path = "robot_master_arena", version = "=0.1.0" }
robot_master_core = { path = "robot_master_core", version = "=0.1.0" }
robot_master_game = { path = "robot_master_game", version = "=0.1.0" }
robot_master_train = { path = "robot_master_train", version = "=0.1.0" }
secrecy = "=0.10.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
smart-default = "=0.7.1"
strum = { version = "=0.28.0", features = ["derive"] }
thiserror = "=2.0.18"
tokio = { version = "=1.52.2", features = ["rt", "rt-multi-thread"] }
tower-http = "=0.6.9"
ustr = { version = "=1.1.0", features = ["serde"] }
uuid = { version = "=1.23.1", features = ["v4"] }
v_utils = { version = "=2.15.41", features = ["macros", "cli"] }
wasm-bindgen = "=0.2.108"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
