[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "robot_master/Cargo.toml"
python-source = "py_src"
module-name = "robot_master"
features = ["python"]

[project]
name = "robot-master-py"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typeguard>=4.4",
  "icecream>=2.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "inline-snapshot>=0.19",
  "ruff>=0.9",
]
train = [
  "torch>=2.0",
  "numpy",
  "onnx",
  "onnxruntime",
  "tensorboard",
]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.pytest.ini_options]
typeguard-packages = "py_src"

[tool.ty.environment]
extra-paths = ["py_src"]
python = ".devenv/state/venv"
