
[dependency-groups]
dev = [
  "ruff>=0.9",
]
train = [
  "torch>=2.0",
  "numpy",
  "onnx",
  "onnxruntime",
  "onnxscript",
  "tensorboard",
]
[project]
dependencies = []
name = "robot-master-py"
requires-python = ">=3.12"
version = "0.1.0"

[tool]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.pytest.ini_options]
testpaths = ["py_src"]
typeguard-packages = "py_src"

[tool.ty.environment]
extra-paths = ["py_src"]
python = ".devenv/state/venv"
