[package]
name = "robot_master"
edition = "2024"
version = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true

[dependencies]
derive-new.workspace = true
indicatif.workspace = true
miette.workspace = true
rand.workspace = true
regex.workspace = true
robot_master_arena.workspace = true
robot_master_core.workspace = true
robot_master_game.workspace = true
robot_master_train.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ustr.workspace = true
v_utils.workspace = true

[lints]
workspace = true
