[package]
name = "robot_master_arena"
edition = "2024"
version = "0.1.0"

[features]
default = []
clickhouse = ["dep:clickhouse", "dep:tokio"]

[dependencies]
robot_master_core = { path = "../robot_master_core" }

clickhouse = { version = "0.14", optional = true }

rand.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokio = { workspace = true, optional = true }
ustr.workspace = true
v_utils.workspace = true

[dev-dependencies]
insta = "1"

[lints]
workspace = true
