[package]
name = "robot_master_arena"
edition = "2024"
version = "0.1.0"

[features]
default = []
clickhouse = ["dep:clickhouse", "dep:tokio"]

[dependencies]
robot_master_core = { workspace = true }

clickhouse = { workspace = true, optional = true }
dashmap = { workspace = true }

board-game.workspace = true
bon.workspace = true
derive-new.workspace = true
derive_more.workspace = true
miette.workspace = true
rand.workspace = true
rayon.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
ustr.workspace = true
v_utils.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
