[package]
name = "robot_master_arena"
description = "Arena and tournament infrastructure for robot_master agents."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
clickhouse = ["dep:clickhouse", "dep:tokio"]

[dependencies]
board-game.workspace = true
bon.workspace = true
clickhouse = { workspace = true, optional = true }
dashmap.workspace = true
derive-new.workspace = true
derive_more.workspace = true
miette.workspace = true
rand.workspace = true
rayon.workspace = true
robot_master_core.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
ustr.workspace = true
v_utils.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
