[package]
name = "robot_master_core"
edition = "2024"
version = "0.1.0"

[dependencies]
board-game.workspace = true
derive_more.workspace = true
internal-iterator.workspace = true
rand.workspace = true
secrecy.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
