[package]
name = "robot_master_core"
description = "Core primitives for the robot_master engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
board-game.workspace = true
derive_more.workspace = true
internal-iterator.workspace = true
rand.workspace = true
secrecy.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
