cargo-features = ["codegen-backend"]

[package]
name = "robot_master_game"
edition = "2024"
version = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
v_utils = { workspace = true, features = ["io", "bevy"] }

[dependencies]
robot_master_arena = { workspace = true }
robot_master_core = { workspace = true }
robot_master_train = { workspace = true }

bevy_simple_text_input = { workspace = true }
fuzzy-matcher = { workspace = true }

bevy.workspace = true
rand.workspace = true
strum.workspace = true
ustr.workspace = true

[lints]
workspace = true
