cargo-features = ["codegen-backend"]

[package]
name = "robot_master_game"
edition = "2024"
version = "0.1.0"

[dependencies]
bevy.workspace = true
bevy_simple_text_input.workspace = true
fuzzy-matcher.workspace = true
rand.workspace = true
robot_master_arena.workspace = true
robot_master_core.workspace = true
robot_master_train.workspace = true
strum.workspace = true
ustr.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
v_utils = { workspace = true, features = ["io", "bevy"] }

[lints]
workspace = true
