cargo-features = ["codegen-backend"]

[package]
name = "robot_master_game"
description = "Bevy-based game frontend for robot_master."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy.workspace = true
bevy_simple_text_input.workspace = true
fuzzy-matcher.workspace = true
rand.workspace = true
robot_master_arena.workspace = true
robot_master_core.workspace = true
robot_master_train.workspace = true
strum.workspace = true
ustr.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
v_utils = { workspace = true, features = ["io", "bevy"] }

[lints]
workspace = true
