cargo-features = ["codegen-backend"]

[package]
name = "robot_master_site"
edition = "2024"
version = "0.1.0"

[package.metadata.leptos]
bin-target = "robot_master_site"
output-name = "robot_master_site"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "../robot_master_game/assets"
site-addr = "127.0.0.1:58937"
reload-port = 58938
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen", "dep:console_error_panic_hook"]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:tower-http",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.108"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }

[dependencies]
axum = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["wasm_js"] }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
robot_master_arena.workspace = true
robot_master_game.workspace = true
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["fs"], optional = true }
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true
