[package]
name = "robot_master_train"
edition = "2024"
version = "0.1.0"

[dependencies]
robot_master_arena = { workspace = true }
robot_master_core = { workspace = true }

bytemuck = { workspace = true }
ort = { workspace = true, features = ["cuda"] }

board-game.workspace = true
clap.workspace = true
derive-new.workspace = true
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
ustr.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
