[package]
name = "robot_master_train"
description = "Training pipeline for robot_master agents."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
board-game.workspace = true
bytemuck.workspace = true
clap.workspace = true
derive-new.workspace = true
ort = { workspace = true, features = ["cuda"] }
rand.workspace = true
rand_distr.workspace = true
rayon.workspace = true
robot_master_arena.workspace = true
robot_master_core.workspace = true
ustr.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
