[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["py_src"]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.pytest.ini_options]
typeguard-packages = "py_src"

[tool.ty.environment]
extra-paths = ["py_src"]
python = ".devenv/state/venv"
